Datepicker and ckeditor are now functioning

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
     <!-- * FontAwesome 5.1 * -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.1.0/css/all.css"
           integrity="sha384-87DrmpqHRiY8hPLIr7ByqhPIywuSsjuQAfMXAE0sMUpY3BM7nXjf+mLIUSvhDArs" crossorigin="anonymous">
+    <script src="https://cdn.ckeditor.com/4.10.0/standard/ckeditor.js"></script>
 </head>
 <body>
 <ddw-root></ddw-root>
