--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,18 @@
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css"
           integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
     <script src="https://cdn.ckeditor.com/4.10.0/standard/ckeditor.js"></script>
+    <!-- * Google Analytics * -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-767255-6"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+        // TODO: Remove 'none' (3rd param) when ready to go live from localhost.
+        gtag('config', 'UA-767255-6', 'none');
+    </script>
 </head>
 <body>
 <ddw-root></ddw-root>
