--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,22 @@
     <!-- * Google Analytics * -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-767255-6"></script>
+    <!-- * Favicon * -->
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/images/outputDir/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/outputDir/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/outputDir/favicon-16x16.png">
+    <link rel="manifest" href="assets/images/outputDir/site.webmanifest">
+    <link rel="mask-icon" href="assets/images/outputDir/safari-pinned-tab.svg" color="#003754">
+    <link rel="shortcut icon" href="assets/images/outputDir/favicon.ico">
+    <meta name="msapplication-TileColor" content="#fcfcfc">
+    <meta name="msapplication-config" content="../src/assets/images/outputDir/browserconfig.xml">
+    <meta name="theme-color" content="#fcfcfc">
+    <!-- * PWA * -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="white">
+    <meta name="msapplication-starturl" content="/">
     <script>
         window.dataLayer = window.dataLayer || [];
         function gtag() {
