Calendar module now added to Home Page sections form

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,6 @@
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
     <!-- * FontAwesome 5.1 * -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css"
           integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
@@ -15,6 +14,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-767255-6"></script>
     <!-- * Favicon * -->
+    <link rel="icon" type="image/x-icon" href="assets/images/outputDir/favicon.ico">
     <link rel="apple-touch-icon" sizes="180x180" href="assets/images/outputDir/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/outputDir/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/outputDir/favicon-16x16.png">
