Added open sans to home page for fonts, and updated meta tags

--- a/src/index.html
+++ b/src/index.html
@@ -32,13 +32,17 @@
     <meta name="msapplication-starturl" content="/">
     <script>
         window.dataLayer = window.dataLayer || [];
+
         function gtag() {
             dataLayer.push(arguments);
         }
+
         gtag('js', new Date());
         // TODO: Remove 'none' (3rd param) when ready to go live from localhost.
         gtag('config', 'UA-767255-6', 'none');
     </script>
+    <!-- * Fonts * -->
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
 <ddw-root></ddw-root>
