Added Real Magnet Script

--- a/src/index.html
+++ b/src/index.html
@@ -46,5 +46,12 @@
 </head>
 <body>
 <ddw-root></ddw-root>
+
+<!-- * Real Magnet * -->
+<script type="text/javascript" src="https://tracking.magnetmail.net/MagnetLeads.js"></script>
+<script type="text/javascript">
+    com.realmagnet.MagnetLeads.init('YIeKNzUjQk23mfYkdPlMOA');
+    com.realmagnet.MagnetLeads.visitPage();
+</script>
 </body>
 </html>
