--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,10 @@
     </script>
     <!-- * Fonts * -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <!-- * For Popup Scam Alert * -->
+    <script src="https://cdn.rawgit.com/vast-engineering/jquery-popup-overlay/1.7.13/jquery.popupoverlay.js"></script>
+    <script src="https://code.jquery.com/jquery-1.8.2.min.js"></script>
+
 </head>
 <body>
 <ddw-root></ddw-root>
