--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <!-- * FontAwesome 5.1 * -->
     <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css"
           integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
-    <script src="https://cdn.ckeditor.com/4.10.0/standard/ckeditor.js"></script>
+    <script src="https://cdn.ckeditor.com/4.10.0/full-all/ckeditor.js"></script>
     <!-- * Google Analytics * -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-767255-6"></script>
