Added Dashboard page with Google Analytics Data Studio

--- a/src/index.html
+++ b/src/index.html
@@ -6,9 +6,9 @@
     <base href="/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- * FontAwesome 5.1 * -->
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css"
-          integrity="sha384-TXfwrfuHVznxCssTxWoPZjhcss/hp38gEOH8UPZG/JcXonvBQ6SlsIF49wUzsGno" crossorigin="anonymous">
+    <!-- * FontAwesome 5 * -->
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-9ralMzdK1QYsk4yBY680hmsb4/hJ98xK3w0TIaJ3ll4POWpWUYaA2bRjGGujGT8w" crossorigin="anonymous">
+
     <script src="https://cdn.ckeditor.com/4.10.0/full-all/ckeditor.js"></script>
     <!-- * Google Analytics * -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
