--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- * FontAwesome 5 * -->
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-9ralMzdK1QYsk4yBY680hmsb4/hJ98xK3w0TIaJ3ll4POWpWUYaA2bRjGGujGT8w" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.3.1/css/all.css"
+          integrity="sha384-9ralMzdK1QYsk4yBY680hmsb4/hJ98xK3w0TIaJ3ll4POWpWUYaA2bRjGGujGT8w" crossorigin="anonymous">
 
     <script src="https://cdn.ckeditor.com/4.10.0/full-all/ckeditor.js"></script>
     <!-- * Google Analytics * -->
@@ -38,8 +39,7 @@
         }
 
         gtag('js', new Date());
-        // TODO: Remove 'none' (3rd param) when ready to go live from localhost.
-        gtag('config', 'UA-767255-6', 'none');
+        gtag('config', 'UA-767255-6');
     </script>
     <!-- * Fonts * -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
