--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
+    <!-- * FOR IE * -->
+    <!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>-->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>DDW Website</title>
     <base href="/">
 
