Updated the Real Magnet Script

--- a/src/index.html
+++ b/src/index.html
@@ -52,10 +52,8 @@
 
 <!-- * Real Magnet * -->
 <script type="text/javascript" src="https://tracking.magnetmail.net/MagnetLeads.js"></script>
-<script type="text/javascript">
-    com.realmagnet.MagnetLeads.init('YIeKNzUjQk23mfYkdPlMOA');
-    com.realmagnet.MagnetLeads.visitPage();
-</script>
+<script type="text/javascript"> com.realmagnet.MagnetLeads.init('vOfqZM3xd0SDAp9xU4UvPA');
+com.realmagnet.MagnetLeads.visitPage(); </script>
 <!-- * Feathr * -->
 <script>
     !function (f, e, a, t, h, r) {
