Updated font awesome to use AGA's CDN account, and updated homepage modal copy

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,10 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- * FontAwesome 5 * -->
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.3.1/css/all.css"
-          integrity="sha384-9ralMzdK1QYsk4yBY680hmsb4/hJ98xK3w0TIaJ3ll4POWpWUYaA2bRjGGujGT8w" crossorigin="anonymous">
+    <link rel="stylesheet"
+          href="https://pro.fontawesome.com/releases/v5.5.0/css/all.css"
+          integrity="sha384-j8y0ITrvFafF4EkV1mPW0BKm6dp3c+J9Fky22Man50Ofxo2wNe5pT1oZejDH9/Dt"
+          crossorigin="anonymous">
 
     <script src="https://cdn.ckeditor.com/4.10.0/full-all/ckeditor.js"></script>
     <!-- * Google Analytics * -->
