Replaced calendar date-picker with input fields bc of IE time zone bugs

--- a/src/index.html
+++ b/src/index.html
@@ -11,12 +11,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- * FontAwesome 5 * -->
     <link rel="stylesheet"
-          href="https://pro.fontawesome.com/releases/v5.5.0/css/all.css"
-          integrity="sha384-j8y0ITrvFafF4EkV1mPW0BKm6dp3c+J9Fky22Man50Ofxo2wNe5pT1oZejDH9/Dt"
+          href="https://pro.fontawesome.com/releases/v5.8.0/css/all.css"
+          integrity="sha384-/pOR6TNYPdUaQQQRKQ4XHznZ4U2K/Lscb3u6jshUngC/31fLTuyX9FZb24gp4O3J"
           crossorigin="anonymous">
-
+    <!-- * CKEditor * -->
     <script src="https://cdn.ckeditor.com/4.10.0/full-all/ckeditor.js"></script>
-    <!-- * Google Analytics * -->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-767255-6"></script>
     <!-- * Favicon * -->
@@ -62,12 +61,12 @@ com.realmagnet.MagnetLeads.visitPage(); </script>
         if (!f[ h ]) {
             r = f[ h ] = function () {
                 r.invoke ?
-                  r.invoke.apply(r, arguments) : r.queue.push(arguments)
+                    r.invoke.apply(r, arguments) : r.queue.push(arguments)
             },
-              r.queue = [], r.loaded = 1 * new Date, r.version = "1.0.0",
-              f.FeathrBoomerang = r;
+                r.queue = [], r.loaded = 1 * new Date, r.version = "1.0.0",
+                f.FeathrBoomerang = r;
             var g = e.createElement(a),
-              h = e.getElementsByTagName("head")[ 0 ] || e.getElementsByTagName("script")[ 0 ].parentNode;
+                h = e.getElementsByTagName("head")[ 0 ] || e.getElementsByTagName("script")[ 0 ].parentNode;
             g.async = !0, g.src = t, h.appendChild(g)
         }
     }(window, document, "script", "https://cdn.feathr.co/js/boomerang.min.js", "feathr");
@@ -80,7 +79,7 @@ com.realmagnet.MagnetLeads.visitPage(); </script>
         if (f.fbq) return;
         n = f.fbq = function () {
             n.callMethod ?
-              n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
         };
         if (!f._fbq) f._fbq = n;
         n.push = n;
@@ -93,7 +92,7 @@ com.realmagnet.MagnetLeads.visitPage(); </script>
         s = b.getElementsByTagName(e)[ 0 ];
         s.parentNode.insertBefore(t, s)
     }(window, document, 'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
+        'https://connect.facebook.net/en_US/fbevents.js');
     fbq('init', '1370426819684258');
     fbq('track', 'PageView');
 </script>
