--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,8 @@
           integrity="sha384-/pOR6TNYPdUaQQQRKQ4XHznZ4U2K/Lscb3u6jshUngC/31fLTuyX9FZb24gp4O3J"
           crossorigin="anonymous">
     <!-- * CKEditor * -->
-    <script src="https://cdn.ckeditor.com/4.10.0/full-all/ckeditor.js"></script>
+    <script src="//cdn.ckeditor.com/4.11.3/standard/ckeditor.js"></script>
+<!--    <script src="https://cdn.ckeditor.com/4.10.0/full-all/ckeditor.js"></script>-->
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-767255-6"></script>
     <!-- * Favicon * -->
